kustomize/overlays/scots-lab/apps/paperless/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Paperless-ngx
    gethomepage.dev/group: Applications
    gethomepage.dev/description: Document Management
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/href: https://docs.srbii.com
    gethomepage.dev/weight: '22'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - docs.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: paperless-paperless-ngx
      port: 8000
